--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@turf/turf": "^7.1.0",
     "d3": "^7.9.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
